<resources>
    <string name="app_name">Pixelmon Brasil</string>
    <string name="app_short_name">Pixelmon Brasil</string>
    <string name="login_online_username_hint">Email ou nome de usuário</string>
    <string name="login_online_login_label">LOGAR</string>
    <string name="pixelmon_login">LOGIN</string>
    <string name="i_have_problems_to_connect"><u>Eu estou com problemas para me conectar</u></string>
    <string name="pixelmon_login_options">Opções de Login</string>
    <string name="hint_control_mapping">"Toque na engrenagem no topo e centro para abrir as opções ⚙\nToque em um botão para customizar: editar, redimensionar, deletar, ou customizar o mapeamento."</string>
    <string name="warning_remove_account">Esta conta será removida!</string>
    <string name="alerttitle_installmod">Selecione um instalador de mod</string>
    <string name="error_fatal">O PojavLauncher parou de funcionar inesperadamente</string>
    <string name="error_no_version">Nenhuma versão!</string>
    <string name="error_show_more">Mostrar mais</string>
    <string name="error_show_less">Mostrar menos</string>
    <string name="error_username">Tem algum problema com o seu nome de usuário</string>
    <string name="toast_permission_denied">É necessário conceder permissão para ler/modificar armazenamento!</string>
    <string name="toast_optifine_success">Instalação concluída</string>
    <string name="mcl_tab_wiki">Documentação</string>
    <string name="mcl_launch_cleancache">Limpando arquivos em cache</string>
    <string name="mcl_launch_downloading">Baixando %s</string>
    <string name="mcl_launch_downloading_progress">"Baixando %s (%.2f MB / %.2f MB)"</string>
    <string name="mcl_launch_download_assets">Preparando para baixar os recursos</string>
    <string name="mcl_options">Opções</string>
    <string name="mcl_option_customcontrol">Controles personalizados</string>
    <string name="mcl_setting_title_use_surface_view">Usar renderização de superfície alternativa</string>
    <string name="mcl_setting_subtitle_use_surface_view">Pode ajudar no desempenho em cenários de GPU limitada.</string>
    <string name="mcl_setting_title_ignore_notch">Ignorar entalhe</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignora o entalhe e estende a tela por baixo.\nGarante uma experiência mais envolvente.</string>
    <string name="mcl_setting_title_resolution_scaler">Escala de resolução</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Permite que você reduza a resolução do jogo. 100% é a resolução total.</string>
    <string name="mcl_setting_title_longpresstrigger">Atraso do toque longo</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Altera o atraso do gatilho de toque longo para destruir blocos e soltar itens.</string>
    <string name="mcl_setting_title_buttonscale">Escala dos botões</string>
    <string name="mcl_setting_subtitle_buttonscale">Aumenta os botões caso estiverem muito pequenos.</string>
    <string name="mcl_setting_title_mousescale">Escala do mouse</string>
    <string name="mcl_setting_subtitle_mousescale">Alterar o tamanho do mouse virtual.</string>
    <string name="mcl_setting_title_javaargs">Argumentos JVM</string>
    <string name="mcl_setting_subtitle_javaargs">Cuidado, isto pode causar falhas no seu jogo caso modificado sem conhecimento.</string>
    <string name="mcl_setting_category_renderer">Renderizador</string>
    <string name="mcl_setting_renderer_gles2_4">Holy GL4ES - (todas as versões, rápido)</string>
    <string name="mcl_setting_renderer_vulkan_zink">Zink (Vulkan) - (todas as versões, mediano, baixa compatibilidade)</string>
    <string name="mcl_setting_renderer_angle">ANGLE - (versões 1.17+, mediano)</string>
    <string name="mcl_setting_veroption_release">Versões finais</string>
    <string name="mcl_setting_veroption_snapshot">Snapshot</string>
    <string name="mcl_setting_veroption_oldalpha">Alpha antiga</string>
    <string name="notification_permission_dialog_title">Solicitação de permissão</string>
    <string name="notification_permission_dialog_text">Pixelmon Brasil precisa de permissão para criar notificações para evitar que o downloads de modpacks ou games parem quando você sai do app. Sem essa permissão, android pode cancelar os downloads, quando você coloca o app pixelmon no background.</string>
    <string name="mcl_setting_veroption_oldbeta">Beta antiga</string>
    <string name="mcl_setting_java_sandbox">Execução sandbox .jar</string>
    <string name="mcl_setting_java_sandbox_subtitle">Controla a disponibilidade do gerenciador de segurança da sandbox ao executar um arquivo .jar.</string>
    <string name="mcl_version_clone">Clonar</string>
    <string name="global_edit">Editar</string>
    <string name="global_error">Erro</string>
    <string name="global_load">Carregar</string>
    <string name="global_name">Nome</string>
    <string name="global_remove">Remover</string>
    <string name="global_clone">Clonar</string>
    <string name="global_restart">Reiniciar</string>
    <string name="global_save">Salvar</string>
    <string name="global_unpacking">Descompactando %s</string>
    <string name="global_error_field_empty">Este campo não pode ficar vazio</string>
    <string name="global_waiting">Aguarde</string>
    <string name="global_select">Selecionar</string>
    <string name="global_retry">Repetir</string>
    <string name="global_default">Padrão</string>
    <string name="mcn_exit_title">Aplicativo/jogo fechou com o código %d, verifique latestlog.txt para mais detalhes.</string>
    <string name="mcn_exit_confirm">Tem certeza que deseja forçar o encerramento?</string>
    <string name="mcn_check_fail_vulkan_support">O renderizador Zink (Vulkan) não é compatível com este dispositivo!</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Depuração</string>
    <string name="control_primary">Esq</string>
    <string name="control_secondary">Dir</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">visão</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: desligado</string>
    <string name="control_mouseon">Mouse: ligado </string>
    <string name="control_forceclose">Forçar encerramento</string>
    <string name="control_viewout">Registro de saída</string>
    <string name="control_adebug">Depuração de entrada</string>
    <string name="control_customkey">Enviar tecla personalizada</string>
    <string name="import_control_label">Importar controles</string>
    <string name="import_control_invalid_file">Arquivo inválido ou corrompido</string>
    <string name="import_control_import_button">Importar controles</string>
    <string name="import_control_verifying_file">O arquivo está sendo verificado, por favor aguarde e tente novamente…</string>
    <string name="import_control_invalid_name">Nome inválido ou o arquivo já existe</string>
    <string name="import_control_done">Importação concluída</string>
    <string name="customctrl_toggle">Alternável</string>
    <string name="customctrl_size">Tamanho</string>
    <string name="customctrl_mapping">Mapeamento</string>
    <string name="customctrl_orientation">Orientação</string>
    <string name="customctrl_background_color">Cor de fundo</string>
    <string name="customctrl_corner_radius">Raio dos cantos</string>
    <string name="customctrl_stroke_width">Largura do traçado</string>
    <string name="customctrl_stroke_color">Cor do traçado</string>
    <string name="customctrl_button_opacity">Opacidade do botão</string>
    <string name="customctrl_addbutton">Adicionar botão</string>
    <string name="customctrl_addbutton_drawer">Adicionar botão gaveta</string>
    <string name="customctrl_addbutton_joystick">Adicionar joystick</string>
    <string name="customctrl_addsubbutton">Adicionar sub-botão</string>
    <string name="customctrl_selectdefault">Selecionar controlmap padrão</string>
    <string name="customctrl_export">Exportar controlmap</string>
    <string name="main_share_logs">Compartilhar arquivo de registro</string>
    <string name="main_install_jar_file">Executar um arquivo .jar</string>
    <string name="main_play">Jogar</string>
    <string name="autoram_info_msg">Memória definida para %d MB</string>
    <string name="mcl_setting_check_libraries">Verificar as bibliotecas depois de baixar</string>
    <string name="mcl_setting_check_libraries_subtitle">Esta opção força o launcher a verificar o hash da biblioteca caso estiver disponível. Impede baixar arquivos com problemas.</string>
    <string name="dl_library_sha_fail">Biblioteca %s está danificada e será baixada novamente</string>
    <string name="dl_library_sha_unknown">A biblioteca %s não pôde ser verificada, vamos assumir que está boa</string>
    <string name="dl_library_sha_pass">Biblioteca %s está boa e utilizável</string>
    <string name="mcl_disable_gestures">Desativar gestos</string>
    <string name="mcl_disable_gestures_subtitle">Desativa gestos, como segurar para quebrar blocos e tocar para colocar um bloco.</string>
    <string name="mcl_disable_swap_hand">Desativar toque duplo para trocar as mãos</string>
    <string name="mcl_disable_swap_hand_subtitle">Desativa o toque duplo em um item da hotbar para trocá-lo na segunda mão.</string>
    <string name="mcl_setting_title_mousespeed">Velocidade do mouse</string>
    <string name="mcl_setting_subtitle_mousespeed">Alterar a velocidade do mouse virtual.</string>
    <string name="customctrl_passthru">Mouse pode atravessar</string>
    <string name="customctrl_swipeable">Deslizável</string>
    <string name="customctrl_forward_lock">Bloqueio para frente</string>
    <string name="memory_warning_msg">A quantidade atual de RAM livre (%d) é menor que a RAM alocada (%d), no qual pode causar falhas. Altere a quantidade se o jogo apresentar alguma falha.</string>
    <string name="mcl_memory_allocation">Alocação de memória</string>
    <string name="mcl_memory_allocation_subtitle">Controla o quanto de RAM será usado pelo Minecraft.</string>
    <string name="multirt_runtime_corrupt">Java Runtime corrompido</string>
    <string name="preference_account_title">Contas</string>
    <string name="preference_account_description">Adicione, selecione e remova contas</string>
    <string name="preference_video_title">Vídeo e renderizador</string>
    <string name="preference_video_description">Resolução, renderização e desempenho</string>
    <string name="preference_control_title">Personalização dos controles</string>
    <string name="preference_control_description">Gestos, botões e escala</string>
    <string name="preference_java_title">Ajustes do Java</string>
    <string name="preference_java_description">Java Runtimes, argumentos JVM, quantidade de RAM e sandbox</string>
    <string name="preference_misc_title">Configurações diversas</string>
    <string name="preference_misc_description">Lista de versões e verificação das bibliotecas</string>
    <string name="preference_experimental_title">Opções experimentais</string>
    <string name="preference_experimental_description">Use estas opções com cuidado, não daremos suporte</string>
    <string name="welcome_pixelmon_brazil">BEM-VINDO AO PIXELMON BRASIL</string>
    <string name="pixelmon_btn_continue">Continuar</string>
    <string name="welcome_pixelmon_message">Explore um mundo incrível, faça amizades, colecione pokémons raros, treine e dispute duelos emocionantes para se tornar o campeão supremo!</string>
    <string name="hint_btn_text_user_name">Nome de usuário</string>
</resources>