<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_pixelmon"
    app:key="">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference />

    <PreferenceCategory>
        <Preference
            android:background="@color/black_pixelmon"
            android:fragment="net.kdt.pojavlaunch.fragments.SelectAuthFragment"
            android:icon="@drawable/pixelmon_account"
            android:key="account"
            android:summary="@string/preference_account_description"
            android:title="@string/preference_account_title" />

        <Preference
            android:background="@color/black_pixelmon"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment"
            android:icon="@drawable/ic_setting_video"
            android:key="video_screen_setting"
            android:summary="@string/preference_video_description"
            android:title="@string/preference_video_title" />

        <Preference
            android:background="@color/black_pixelmon"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceControlFragment"
            android:icon="@drawable/ic_menu_custom_controls"
            android:key="control_screen_setting"
            android:summary="@string/preference_control_description"
            android:title="@string/preference_control_title"

            />

        <Preference
            android:background="@color/black_pixelmon"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceJavaFragment"
            android:icon="@drawable/ic_setting_java_runtime"
            android:key="java_screen_setting"
            android:summary="@string/preference_java_description"
            android:title="@string/preference_java_title"

            />

        <Preference
            android:background="@color/black_pixelmon"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceMiscellaneousFragment"
            android:icon="@drawable/ic_setting_misc"
            android:key="misc_screen_setting"
            android:summary="@string/preference_misc_description"
            android:title="@string/preference_misc_title"

            />

        <Preference
            android:background="@color/black_pixelmon"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceExperimentalFragment"
            android:key="experimental_screen_setting"
            android:summary="@string/preference_experimental_description"
            android:title="@string/preference_experimental_title"

            />
    </PreferenceCategory>


    <Preference android:key="notification_permission_request" />


</PreferenceScreen>