<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="720dp"
    android:background="@color/background_app"
    android:paddingHorizontal="@dimen/fragment_padding_medium">

    <View
        android:id="@+id/login_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"

        android:background="@drawable/background_card"
        android:translationZ="-1dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pixelmon_login"
        app:layout_constraintBottom_toTopOf="@+id/login_edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_menu" />

    <com.kdt.mcgui.MineEditText
        android:id="@+id/login_edit_email"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:gravity="center"
        android:hint="@string/hint_btn_text_user_name"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/login_menu"
        app:layout_constraintStart_toStartOf="@+id/login_menu"
        app:layout_constraintTop_toTopOf="@+id/login_menu"
        app:layout_constraintVertical_bias="0.251" />

    <com.kdt.mcgui.MineButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/padding_heavy"
        android:onClick="loginMC"
        android:text="@string/login_online_login_label"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_email" />

</androidx.constraintlayout.widget.ConstraintLayout>